app/assets/stylesheets/events_index.scss
// body {
// 	background: white;
// }

// .container-fluid {
// 	width: 95%
// }

.map-container {
	height: 70vh;
}

.map-container #map {
	width: 100%;
	height: 100%;
}

.info-window-content a {
	color: #8C0902;
}

.search-sidebar {
	min-width: 400px;
	max-width: 400px;
}

@media only screen and (max-width: 576px) {
    .search-sidebar {
    	width: 100%;
    }

    .map-container {
			height: 20vh;
		}
}

.events-index-body {
	height: 100%;
	overflow: scroll;
}

.card-deck {
	height: 70vh;
	overflow: scroll;
}

.eventcard {
	a img {
		width: 100%;
		height: 12rem;
		object-fit: cover;
		object-position: center;
		background-color: black;
	}

	p.viewcount {
		position: absolute;
		top: 0.75rem;
		right: 1rem;
	}

	p.badge {
		position: absolute;
		transform: translateY(-50%);
		right: 1rem;
		// border: 1px solid red;
	}
}


// Bootstrap 4 breakpoints & gutter
$grid-breakpoints: (
    xs: 0,
    // sm: 576px,
    md: 768px,
    lg: 992px,
    xl: 1200px,
    xx: 1500px
) !default;

$grid-gutter-width: 30px !default;

// number of cards per line for each breakpoint
$cards-per-line: (
    xs: 1,
    // sm: 1,
    md: 1,
    lg: 2,
    xl: 3,
    xx: 4
);

@each $name, $breakpoint in $grid-breakpoints {
	@media (min-width: $breakpoint) {
		.card-deck .card {
			flex: 0 0 calc(#{100/map-get($cards-per-line, $name)}% - #{$grid-gutter-width});
		}
	}
}

